--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
-loaderVersion = "[45,)"
-#issueTrackerURL = ""
+loaderVersion = "[46,)"
+issueTrackerURL = "https://github.com/MrMelon54/clock_hud/issues"
 license = "GPL-3.0-only"
 
 [[mods]]
@@ -14,20 +14,19 @@ logoFile = "/icon.png"
 [[dependencies.clock_hud]]
 modId = "forge"
 mandatory = true
-versionRange = "[45,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.clock_hud]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[1.19.4,)"
+versionRange = "[1.20,)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.clock_hud]]
 modId = "architectury"
 mandatory = true
-versionRange = "[8.1.79,)"
+versionRange = "[9.0.0,)"
 ordering = "AFTER"
 side = "BOTH"
