--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -14,6 +14,7 @@ logoFile = "/icon.png"
 [[dependencies.clock_hud]]
 modId = "forge"
 mandatory = true
+versionRange = "[46,)"
 ordering = "NONE"
 side = "BOTH"
 
