--- a/gradle.properties
+++ b/gradle.properties
@@ -7,18 +7,18 @@ archives_base_name=clock_hud
 mod_id=clock_hud
 mod_name=Clock HUD
 mod_version=1.0.1
-mod_description="Display a clock on the client"
+mod_description=Display a clock on the client
 maven_group=com.mrmelon54.ClockHud
 
-architectury_version=10.0.8
+architectury_version=11.0.9
 
-fabric_loader_version=0.14.22
-fabric_api_version=0.89.3+1.20.2
+fabric_loader_version=0.15.3
+fabric_api_version=0.93.1+1.20.4
 
-forge_version=1.20.2-48.0.13
+forge_version=1.20.4-49.0.19
 
-quilt_loader_version=0.21.0
-quilt_fabric_api_version=7.0.0+0.83.0-1.20
+quilt_loader_version=0.22.0
+quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
 
-cloth_config_version=12.0.109
-modmenu_version=8.0.0
+cloth_config_version=13.0.121
+modmenu_version=9.0.0
