--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -15,7 +15,7 @@ displayURL = "https://mrmelon54.com/minecraft/clock-hud"
 [[dependencies.clock_hud]]
 modId = "minecraft"
 mandatory = true
-versionRange = "[${minecraft_version},)"
+versionRange = "${minecraft_version}"
 ordering = "NONE"
 side = "BOTH"
 
