--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,41 @@ plugins {
     id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
     id "io.github.pacifistmc.forgix" version "1.2.6"
     id "org.ajoberstar.grgit" version "4.1.0"
+    id "systems.manifold.manifold-gradle-plugin" version "0.0.2-alpha"
 }
+
+def writeBuildGradlePredefine(List<String> mcVers, int mcIndex) {
+    // Build the list of preprocessors to use
+    StringBuilder sb = new StringBuilder();
+
+    sb.append("# DON'T TOUCH THIS FILE, This is handled by the build script\n");
+
+
+    for (int i = 0; i < mcVers.size(); i++) {
+        String verStr = mcVers[i].replace(".", "_");
+        sb.append("MC_" + verStr + "=" + i.toString() + "\n");
+
+        if (mcIndex == i)
+            sb.append("MC_VER=" + i.toString() + "\n");
+    }
+
+
+    // Check if this is a development build
+    if (mod_version.toLowerCase().contains("dev")) {
+        // WARNING: only use this for logging, we don't want to have confusion
+        // when a method doesn't work correctly in the release build.
+        sb.append("DEV_BUILD=\n");
+    }
+
+    new File(projectDir, "build.properties").text = sb.toString()
+}
+
+project.gradle.ext.getProperties().each { prop ->
+    rootProject.ext.set(prop.key, prop.value)
+}
+writeBuildGradlePredefine(rootProject.mcVers, rootProject.mcIndex)
+
+rootProject.versionStr = "mc${project.minecraft_version}-${project.mod_version}-${getVersionMetadata()}"
 
 architectury {
     minecraft = rootProject.minecraft_version
@@ -23,9 +57,6 @@ subprojects {
         // The following line declares the yarn mappings you may select this one as well.
         // mappings "net.fabricmc:yarn:1.19.4+build.2:v2"
     }
-
-    build.finalizedBy(mergeJars)
-    assemble.finalizedBy(mergeJars)
 }
 
 allprojects {
@@ -34,7 +65,7 @@ allprojects {
     apply plugin: "maven-publish"
 
     archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
+    version = "${project.name}-${rootProject.versionStr}"
     group = rootProject.maven_group
 
     repositories {
@@ -59,8 +90,28 @@ allprojects {
 
 forgix {
     group = "com.mrmelon54.ClockHud"
-    mergedJarName = "${project.archivesBaseName}-mc${project.minecraft_version}-${project.mod_version}-${getVersionMetadata()}.jar"
-    outputDir = "build/libs/merged"
+    mergedJarName = "${project.archives_base_name}-${rootProject.versionStr}.jar"
+
+    if (findProject(":fabric"))
+        fabric {
+            jarLocation = "build/libs/${project.archives_base_name}-fabric-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":quilt"))
+        quilt {
+            jarLocation = "build/libs/${project.archives_base_name}-quilt-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":forge"))
+        forge {
+            jarLocation = "build/libs/${project.archives_base_name}-forge-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":neoforge"))
+        custom {
+            projectName = "neoforge"
+            jarLocation = "build/libs/${project.archives_base_name}-neoforge-${rootProject.versionStr}.jar"
+        }
 }
 
 def getVersionMetadata() {
