--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx4096M
 
 minecraft_version=1.20.4
-enabled_platforms=quilt,fabric,forge
+enabled_platforms=quilt,fabric,neoforge
 
 archives_base_name=clock_hud
 mod_id=clock_hud
@@ -22,3 +22,10 @@ quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
 
 cloth_config_version=13.0.121
 modmenu_version=9.0.0
+
+# Internal Properties
+versionStr=
+
+# This defines what MC version Intellij will use for the preprocessor
+# and what version is used automatically by build and run commands
+mcVer=1.20.4
