--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           distribution: "adopt"
 
       - name: Build
-        run: ./gradlew build
+        run: ./buildall.sh
 
       - name: Deploy
         if: startsWith(github.ref, 'refs/tags/v')
