--- a/versionProperties/1.20.4.properties
+++ b/versionProperties/1.20.4.properties
@@ -1,20 +1,22 @@
 # 1.20.4 version
+java_version=17
 minecraft_version=1.20.4
 compatible_minecraft_versions=["1.20.3", "1.20.4"]
+accessWidenerVersion=1_20_4
 builds_for=fabric,quilt,neoforge
 
-architectury_version=11.0.9
+architectury_version=11.0.12
 
 # Fabric
-fabric_loader_version=0.15.3
-fabric_api_version=0.93.1+1.20.4
+fabric_loader_version=0.15.7
+fabric_api_version=0.96.4+1.20.4
 
 # Quilt
-quilt_loader_version=0.22.0
+quilt_loader_version=0.24.0-beta.8
 quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
 
 # NeoForge
-neoforge_version=20.4.182
+neoforge_version=20.4.183
 
 # Libraries
 cloth_config_version=13.0.121
