--- a/versionProperties/1.20.2.properties
+++ b/versionProperties/1.20.2.properties
@@ -1,17 +1,19 @@
 # 1.20.2 version
+java_version=17
 minecraft_version=1.20.2
 compatible_minecraft_versions=["1.20.2"]
+accessWidenerVersion=1_20_2
 builds_for=fabric,quilt,neoforge
 
-architectury_version=10.0.18
+architectury_version=11.0.12
 
 # Fabric
-fabric_loader_version=0.15.3
-fabric_api_version=0.90.4+1.20.2
+fabric_loader_version=0.15.7
+fabric_api_version=0.91.6+1.20.2
 
 # Quilt
-quilt_loader_version=0.22.0
-quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
+quilt_loader_version=0.24.0-beta.8
+quilt_fabric_api_version=8.0.0-alpha.4+0.91.6-1.20.2
 
 # NeoForge
 neoforge_version=20.2.88
