--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,10 +23,10 @@ jobs:
       matrix: ${{ fromJson(needs.resolve-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 17
+      - name: Set up JDK ${{ matrix.java }}
         uses: actions/setup-java@v3
         with:
-          java-version: "17"
+          java-version: ${{ matrix.java }}
           distribution: "adopt"
       - name: Create cache for builds
         uses: actions/cache@v4
@@ -34,7 +34,7 @@ jobs:
           path: buildAllJars
           key: buildAllJars-key
       - name: Build
-        run: ./buildsingle.sh ${{ matrix.version }}
+        run: ./buildsingle.sh "${{ matrix.mc }}"
 
   deploy:
     needs: build
