--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@ mod_version=1.0.2
 mod_description=Display a clock on the client
 maven_group=com.mrmelon54.ClockHud
 
+# Plugin versions
+manifold_version=2024.1.1
+
 # Internal Properties
 versionStr=
 
