--- a/versionProperties/1.18.2.properties
+++ b/versionProperties/1.18.2.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.18.2"]
 accessWidenerVersion=1_18_2
 builds_for=fabric,quilt,forge
 
+architectury_group=dev.architectury
 architectury_version=4.12.94
 
 # Fabric loader
