--- a/versionProperties/1.19.2.properties
+++ b/versionProperties/1.19.2.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.19.2"]
 accessWidenerVersion=1_19_2
 builds_for=fabric,quilt,forge
 
+architectury_group=dev.architectury
 architectury_version=6.6.92
 
 # Fabric loader
