--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -26,7 +26,7 @@ configurations {
 dependencies {
     neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
     // Remove the next line if you don't want to depend on the API
-    modApi "dev.architectury:architectury-neoforge:${rootProject.architectury_version}"
+    modApi "${rootProject.architectury_group}:architectury-neoforge:${rootProject.architectury_version}"
 
     modApi "me.shedaniel.cloth:cloth-config-neoforge:${rootProject.cloth_config_version}"
 
