--- a/versionProperties/1.16.5.properties
+++ b/versionProperties/1.16.5.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.16.4", "1.16.5"]
 accessWidenerVersion=1_16
 builds_for=fabric,forge
 
+architectury_group=me.shedaniel
 architectury_version=1.32.68
 
 # Fabric loader
@@ -15,7 +16,7 @@ fabric_api_version=0.42.0+1.16
 forge_version=1.16.5-36.2.41
 
 # Libraries
-cloth_config_version=
-modmenu_version=9.0.0
+cloth_config_version=4.17.101
+modmenu_version=1.16.23
 
 mcVer=1.16.5
