--- a/versionProperties/1.17.1.properties
+++ b/versionProperties/1.17.1.properties
@@ -3,17 +3,14 @@ java_version=16
 minecraft_version=1.17.1
 compatible_minecraft_versions=["1.17", "1.17.1"]
 accessWidenerVersion=1_17_1
-builds_for=fabric,quilt,forge
+builds_for=fabric,forge
 
+architectury_group=dev.architectury
 architectury_version=2.10.12
 
 # Fabric loader
 fabric_loader_version=0.15.7
-fabric_api_version=0.87.2+1.19.4
-
-# Quilt
-quilt_loader_version=0.24.0-beta.8
-quilt_fabric_api_version=6.0.0-beta.11+0.87.0-1.19.4
+fabric_api_version=0.46.1+1.17
 
 # Forge loader
 forge_version=1.17.1-37.1.1
