--- a/versionProperties/1.19.4.properties
+++ b/versionProperties/1.19.4.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.19.4"]
 accessWidenerVersion=1_19_4
 builds_for=fabric,quilt,forge
 
+architectury_group=dev.architectury
 architectury_version=8.2.91
 
 # Fabric loader
