--- a/versionProperties/1.20.1.properties
+++ b/versionProperties/1.20.1.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.20", "1.20.1"]
 accessWidenerVersion=1_20
 builds_for=fabric,quilt,forge
 
+architectury_group=dev.architectury
 architectury_version=9.2.14
 
 # Fabric loader
