--- a/versionProperties/1.20.2.properties
+++ b/versionProperties/1.20.2.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.20.2"]
 accessWidenerVersion=1_20_2
 builds_for=fabric,quilt,neoforge
 
+architectury_group=dev.architectury
 architectury_version=10.0.18
 
 # Fabric
