--- a/versionProperties/1.20.4.properties
+++ b/versionProperties/1.20.4.properties
@@ -5,6 +5,7 @@ compatible_minecraft_versions=["1.20.3", "1.20.4"]
 accessWidenerVersion=1_20_4
 builds_for=fabric,quilt,neoforge
 
+architectury_group=dev.architectury
 architectury_version=11.0.12
 
 # Fabric
