--- a/versionProperties/1.19.2.properties
+++ b/versionProperties/1.19.2.properties
@@ -20,7 +20,7 @@ quilt_fabric_api_version=4.0.0-beta.30+0.77.0-1.19.2
 forge_version=1.19.2-43.3.8
 
 # Libraries
-cloth_config_version=11.1.118
-modmenu_version=7.2.2
+cloth_config_version=8.3.115
+modmenu_version=4.2.0-beta.2
 
 mcVer=1.19.2
