--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -25,7 +25,9 @@ configurations {
 
 dependencies {
     modImplementation "org.quiltmc:quilt-loader:${rootProject.quilt_loader_version}"
-    modApi "org.quiltmc.quilted-fabric-api:quilted-fabric-api:${rootProject.quilt_fabric_api_version}"
+    modApi("org.quiltmc.quilted-fabric-api:quilted-fabric-api:${rootProject.quilt_fabric_api_version}") {
+        exclude group: "net.fabricmc.fabric-api"
+    }
     // Remove the next few lines if you don't want to depend on the API
     modApi("${rootProject.architectury_group}:architectury-fabric:${rootProject.architectury_version}") {
         // We must not pull Fabric Loader from Architectury Fabric
