--- a/settings.gradle
+++ b/settings.gradle
@@ -51,9 +51,13 @@ loadProperties()
 
 // include projects
 include("common")
-include("fabric-like")
 
 var builds_for = ((String) gradle.builds_for).split(",")
+
+// include fabric-like when using fabric or quilt
+if (builds_for.contains("fabric") || builds_for.contains("quilt"))
+    include("fabric-like")
+
 for (loader in builds_for) {
     def l = loader.strip() // Strip it in case a space is added before or after the comma
     println "Adding loader " + l
