Remove quilt from 1.20.4

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ version = "${version}"
 displayName = "Clock HUD"
 authors = "MrMelon54"
 description = "${description}"
-logoFile = "/icon.png"
+logoFile = "icon.png"
 displayURL = "https://mrmelon54.com/minecraft/clock-hud"
 
 [[dependencies.clock_hud]]
