--- a/versionProperties/1.20.4.properties
+++ b/versionProperties/1.20.4.properties
@@ -3,7 +3,7 @@ java_version=17
 minecraft_version=1.20.4
 compatible_minecraft_versions=["1.20.3", "1.20.4"]
 accessWidenerVersion=1_20_4
-builds_for=fabric,quilt,neoforge
+builds_for=fabric,neoforge
 
 architectury_group=dev.architectury
 architectury_version=11.0.12
@@ -14,7 +14,7 @@ fabric_api_version=0.96.4+1.20.4
 
 # Quilt
 quilt_loader_version=0.24.0-beta.8
-quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
+quilt_fabric_api_version=8.0.0-alpha.4+0.91.6-1.20.2
 
 # NeoForge
 neoforge_version=20.4.183
