--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -44,7 +44,7 @@ processResources {
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
                 "description": rootProject.mod_description,
-                "minecraft_version": rootProject.minecraft_version,
+                "compatible_minecraft_versions": rootProject.compatible_minecraft_versions,
                 "architectury_version": rootProject.architectury_version,
                 "cloth_config_version": rootProject.cloth_config_version,
                 "cloth_config_old": (rootProject.mcVer == "1.16.5" || rootProject.mcVer == "1.17.1") ? "2" : ""
