--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,25 @@ name: Java CI
 on: [ push ]
 
 jobs:
-  build:
+  resolve-versions:
+    name: "Resolve Versions"
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: jo
+      - id: set-matrix
+        run: ./resolveversions.sh >> $GITHUB_OUTPUT
 
+  build:
+    needs: resolve-versions
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix: ${{ fromJson(needs.resolve-versions.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -13,10 +29,25 @@ jobs:
         with:
           java-version: "17"
           distribution: "adopt"
-
+      - name: Create cache for builds
+        uses: actions/cache@v4
+        with:
+          path: buildAllJars
+          key: buildAllJars-key
       - name: Build
-        run: ./gradlew build
+        run: ./buildsingle.sh "${{ matrix.mc }}"
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/checkout@v3
+      - name: Restore cached docker image
+        uses: actions/cache/restore@v4
+        with:
+          path: buildAllJars
+          key: buildAllJars-key
       - name: Deploy
         if: startsWith(github.ref, 'refs/tags/v')
-        run: 'curl --fail -X POST -H "Authorization: Bearer ${{ secrets.DEPLOY }}" -F "upload=@$(ls -1 build/libs/merged/*.jar)" https://api.mrmelon54.com/v1/mc-upload/upload/clock-hud'
+        run: ./publishbuilds.sh
