--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,47 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.4-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
     id "io.github.pacifistmc.forgix" version "1.2.6"
     id "org.ajoberstar.grgit" version "4.1.0"
+    id "systems.manifold.manifold-gradle-plugin" version "0.0.2-alpha"
+}
+
+def writeBuildGradlePredefine(List<String> mcVers, int mcIndex) {
+    // Build the list of preprocessors to use
+    StringBuilder sb = new StringBuilder();
+
+    sb.append("# DON'T TOUCH THIS FILE, This is handled by the build script\n");
+
+
+    for (int i = 0; i < mcVers.size(); i++) {
+        String verStr = mcVers[i].replace(".", "_");
+        sb.append("MC_" + verStr + "=" + i.toString() + "\n");
+
+        if (mcIndex == i)
+            sb.append("MC_VER=" + i.toString() + "\n");
+    }
+
+
+    // Check if this is a development build
+    if (mod_version.toLowerCase().contains("dev")) {
+        // WARNING: only use this for logging, we don't want to have confusion
+        // when a method doesn't work correctly in the release build.
+        sb.append("DEV_BUILD=\n");
+    }
+
+    new File(projectDir, "build.properties").text = sb.toString()
+}
+
+project.gradle.ext.getProperties().each { prop ->
+    rootProject.ext.set(prop.key, prop.value)
+}
+writeBuildGradlePredefine(rootProject.mcVers, rootProject.mcIndex)
+
+rootProject.versionStr = "${project.mod_version}-mc${project.minecraft_version}"
+
+compileJava {
+    sourceCompatibility = rootProject.java_version
+    targetCompatibility = rootProject.java_version
 }
 
 architectury {
@@ -11,21 +50,21 @@ architectury {
 
 subprojects {
     apply plugin: "dev.architectury.loom"
+    apply plugin: "systems.manifold.manifold-gradle-plugin"
 
     loom {
         silentMojangMappingsLicense()
     }
 
     dependencies {
+        annotationProcessor("systems.manifold:manifold-preprocessor:${rootProject.manifold_version}")
+
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
         // The following line declares the mojmap mappings, you may use other mappings as well
         mappings loom.officialMojangMappings()
         // The following line declares the yarn mappings you may select this one as well.
         // mappings "net.fabricmc:yarn:1.19.4+build.2:v2"
     }
-
-    build.finalizedBy(mergeJars)
-    assemble.finalizedBy(mergeJars)
 }
 
 allprojects {
@@ -33,8 +72,8 @@ allprojects {
     apply plugin: "architectury-plugin"
     apply plugin: "maven-publish"
 
-    archivesBaseName = rootProject.archives_base_name
-    version = rootProject.mod_version
+    archivesBaseName = "${rootProject.archives_base_name}-${project.name}"
+    version = rootProject.versionStr
     group = rootProject.maven_group
 
     repositories {
@@ -49,7 +88,17 @@ allprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.release = 17
+        options.release = rootProject.java_version as Integer
+        options.compilerArgs += ["-Xplugin:Manifold"]
+    }
+
+    processResources {
+        exclude { file ->
+            if (file.name.contains(".${mod_id}.accesswidener") && file.name != "${accessWidenerVersion}.${mod_id}.accesswidener") {
+                return true
+            }
+            return false
+        }
     }
 
     java {
@@ -59,8 +108,28 @@ allprojects {
 
 forgix {
     group = "com.mrmelon54.ClockHud"
-    mergedJarName = "${project.archivesBaseName}-mc${project.minecraft_version}-${project.mod_version}-${getVersionMetadata()}.jar"
-    outputDir = "build/libs/merged"
+    mergedJarName = "${project.archives_base_name}-${rootProject.versionStr}-${getVersionMetadata()}.jar"
+
+    if (findProject(":fabric"))
+        fabric {
+            jarLocation = "build/libs/${project.archives_base_name}-fabric-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":quilt"))
+        quilt {
+            jarLocation = "build/libs/${project.archives_base_name}-quilt-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":forge"))
+        forge {
+            jarLocation = "build/libs/${project.archives_base_name}-forge-${rootProject.versionStr}.jar"
+        }
+
+    if (findProject(":neoforge"))
+        custom {
+            projectName = "neoforge"
+            jarLocation = "build/libs/${project.archives_base_name}-neoforge-${rootProject.versionStr}.jar"
+        }
 }
 
 def getVersionMetadata() {
@@ -86,3 +155,13 @@ def getVersionMetadata() {
     // No tracking information could be found about the build
     return "unknown"
 }
+
+// Delete the merged folder when running clean
+task cleanMergedJars() {
+    def mergedFolder = file("Merged")
+    if (mergedFolder.exists()) {
+        delete(mergedFolder)
+    }
+}
+// add cleanMergedJars to the end of the "clean" task
+tasks["clean"].finalizedBy(cleanMergedJars)
