--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
     // Remove the next line if you don't want to depend on the API
-    modApi "dev.architectury:architectury-fabric:${rootProject.architectury_version}"
+    modApi "${rootProject.architectury_group}:architectury-fabric:${rootProject.architectury_version}"
 
     modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
@@ -44,9 +44,10 @@ processResources {
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
                 "description": rootProject.mod_description,
-                "minecraft_version": rootProject.minecraft_version,
+                "compatible_minecraft_versions": rootProject.compatible_minecraft_versions,
                 "architectury_version": rootProject.architectury_version,
-                "cloth_config_version": rootProject.cloth_config_version
+                "cloth_config_version": rootProject.cloth_config_version,
+                "cloth_config_old": (rootProject.mcVer == "1.16.5" || rootProject.mcVer == "1.17.1") ? "2" : ""
      }
 }
 
