--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,5 @@
 org.gradle.jvmargs=-Xmx4096M
 
-minecraft_version=1.20.4
-enabled_platforms=quilt,fabric,forge
-
 archives_base_name=clock_hud
 mod_id=clock_hud
 mod_name=Clock HUD
@@ -10,15 +7,12 @@ mod_version=1.0.2
 mod_description=Display a clock on the client
 maven_group=com.mrmelon54.ClockHud
 
-architectury_version=11.0.9
+# Plugin versions
+manifold_version=2024.1.1
 
-fabric_loader_version=0.15.3
-fabric_api_version=0.93.1+1.20.4
+# Internal Properties
+versionStr=
 
-forge_version=1.20.4-49.0.19
-
-quilt_loader_version=0.22.0
-quilt_fabric_api_version=7.4.0+0.90.0-1.20.1
-
-cloth_config_version=13.0.121
-modmenu_version=9.0.0
+# This defines what MC version Intellij will use for the preprocessor
+# and what version is used automatically by build and run commands
+mcVer=1.16.5
