--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -2,21 +2,17 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+repositories {
+    maven { url "https://maven.neoforged.net/releases/" }
+}
+
 architectury {
     platformSetupLoomIde()
-    forge()
+    neoForge()
 }
 
 loom {
     accessWidenerPath = project(":common").loom.accessWidenerPath
-
-    forge {
-        convertAccessWideners = true
-        extraAccessWideners.add loom.accessWidenerPath.get().asFile.name
-
-        mixinConfig "clock_hud-common.mixins.json"
-        mixinConfig "clock_hud.mixins.json"
-    }
 }
 
 configurations {
@@ -24,18 +20,18 @@ configurations {
     shadowCommon // Don't use shadow from the shadow plugin since it *excludes* files.
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
-    developmentForge.extendsFrom common
+    developmentNeoForge.extendsFrom common
 }
 
 dependencies {
-    forge "net.minecraftforge:forge:${rootProject.forge_version}"
+    neoForge "net.neoforged:neoforge:${rootProject.neoforge_version}"
     // Remove the next line if you don't want to depend on the API
-    modApi "${rootProject.architectury_group}:architectury-forge:${rootProject.architectury_version}"
+    modApi "${rootProject.architectury_group}:architectury-neoforge:${rootProject.architectury_version}"
 
-    modApi "me.shedaniel.cloth:cloth-config-forge:${rootProject.cloth_config_version}"
+    modApi "me.shedaniel.cloth:cloth-config-neoforge:${rootProject.cloth_config_version}"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
-    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+    shadowCommon(project(path: ":common", configuration: "transformProductionNeoForge")) { transitive = false }
 }
 
 processResources {
@@ -47,7 +43,7 @@ processResources {
                 "compatible_minecraft_versions": "${compatible_minecraft_versions}".replaceAll("\"", "").replaceAll("]", ")"),
                 "architectury_version": rootProject.architectury_version,
                 "cloth_config_version": rootProject.cloth_config_version
-     }
+    }
 }
 
 shadowJar {
@@ -82,7 +78,7 @@ components.java {
 
 publishing {
     publications {
-        mavenForge(MavenPublication) {
+        mavenNeoForge(MavenPublication) {
             artifactId = rootProject.archives_base_name + "-" + project.name
             from components.java
         }
