--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -25,9 +25,11 @@ configurations {
 
 dependencies {
     modImplementation "org.quiltmc:quilt-loader:${rootProject.quilt_loader_version}"
-    modApi "org.quiltmc.quilted-fabric-api:quilted-fabric-api:${rootProject.quilt_fabric_api_version}"
+    modApi("org.quiltmc.quilted-fabric-api:quilted-fabric-api:${rootProject.quilt_fabric_api_version}") {
+        exclude group: "net.fabricmc.fabric-api"
+    }
     // Remove the next few lines if you don't want to depend on the API
-    modApi("dev.architectury:architectury-fabric:${rootProject.architectury_version}") {
+    modApi("${rootProject.architectury_group}:architectury-fabric:${rootProject.architectury_version}") {
         // We must not pull Fabric Loader from Architectury Fabric
         exclude group: "net.fabricmc"
         exclude group: "net.fabricmc.fabric-api"
@@ -56,7 +58,7 @@ processResources {
         expand "group": rootProject.maven_group,
                 "version": project.version,
                 "description": rootProject.mod_description,
-                "minecraft_version": rootProject.minecraft_version,
+                "compatible_minecraft_versions": rootProject.compatible_minecraft_versions,
                 "architectury_version": rootProject.architectury_version,
                 "cloth_config_version": rootProject.cloth_config_version
     }
