--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,4 +50,8 @@ jobs:
           key: buildAllJars-key
       - name: Deploy
         if: startsWith(github.ref, 'refs/tags/v')
-        run: ./publishbuilds.sh
+        run: |
+          #!/bin/bash
+          while read -r filename; do
+            curl --fail -X POST -H "Authorization: Bearer ${{ secrets.DEPLOY }}" -F "upload=@$filename" https://api.mrmelon54.com/v1/mc-upload/upload/clock-hud
+          done < <(find ./buildAllJars/ -name '*.jar' -type f)
