--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,8 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: awalsh128/cache-apt-pkgs-action@latest
-        with:
-          packages: jo
+      - run: sudo apt-get update && sudo apt-get install -y jo
+      - uses: actions/checkout@v4
       - id: set-matrix
         run: ./resolveversions.sh >> $GITHUB_OUTPUT
 
@@ -23,30 +21,31 @@ jobs:
       fail-fast: false
       matrix: ${{ fromJson(needs.resolve-versions.outputs.matrix) }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: "17"
           distribution: "adopt"
-      - name: Create cache for builds
-        uses: actions/cache@v4
-        with:
-          path: buildAllJars
-          key: buildAllJars-key
       - name: Build
         run: ./buildsingle.sh "${{ matrix.mc }}"
+      - uses: actions/upload-artifact@v4
+        with:
+          name: "buildAllJars-${{matrix.mc}}"
+          path: buildAllJars/*.jar
+          if-no-files-found: error
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Restore cached docker image
-        uses: actions/cache/restore@v4
+      - uses: actions/checkout@v4
+      - name: Download All Artifacts
+        uses: actions/download-artifact@v4
         with:
           path: buildAllJars
-          key: buildAllJars-key
+          pattern: buildAllJars-*
+          merge-multiple: true
       - name: Files
         run: |
           #!/bin/bash
