--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ manifold_version=2024.1.1
 
 # Internal Properties
 versionStr=
+compatible_forge_versions=
 
 # This defines what MC version Intellij will use for the preprocessor
 # and what version is used automatically by build and run commands
