--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ mod_description=Display a clock on the client
 maven_group=com.mrmelon54.ClockHud
 
 # Plugin versions
-manifold_version=2024.1.1
+manifold_version=2024.1.+
 
 # Internal Properties
 versionStr=
@@ -16,4 +16,4 @@ compatible_forge_versions=
 
 # This defines what MC version Intellij will use for the preprocessor
 # and what version is used automatically by build and run commands
-mcVer=1.16.5
+mcVer=1.20.4
