--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,9 @@ maven_group=com.mrmelon54.ClockHud
 # Plugin versions
 manifold_version=2024.1.+
 
+# Global mod versions
+omniplay_version=0.1.1
+
 # Internal Properties
 versionStr=
 compatible_forge_versions=
