--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -33,9 +33,7 @@ dependencies {
     modApi "${rootProject.architectury_group}:architectury-forge:${rootProject.architectury_version}"
 
     modApi "me.shedaniel.cloth:cloth-config-forge:${rootProject.cloth_config_version}"
-
-    common(project(path: ":common", configuration: "namedElements")) { transitive false }
-    shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+    modApi "com.mrmelon54.OmniPlay:omniplay-forge:${rootProject.omniplay_version}-mc${rootProject.mcVer}"
 }
 
 processResources {
@@ -47,7 +45,7 @@ processResources {
                 "compatible_minecraft_versions": rootProject.compatible_forge_versions,
                 "architectury_version": rootProject.architectury_version,
                 "cloth_config_version": rootProject.cloth_config_version
-     }
+    }
 }
 
 shadowJar {
