--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,6 +16,9 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:${rootProject.cloth_config_version}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+    modApi("com.terraformersmc:modmenu:${rootProject.modmenu_version}") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
     modApi("com.mrmelon54.OmniPlay:omniplay:${rootProject.omniplay_version}-mc${rootProject.mcVer}") {
         exclude(group: "net.fabricmc.fabric-api")
     }
