--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.5-SNAPSHOT" apply false
-    id "io.github.pacifistmc.forgix" version "1.2.6"
-    id "org.ajoberstar.grgit" version "4.1.0"
+    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "io.github.pacifistmc.forgix" version "1.2.9"
+    id "org.ajoberstar.grgit" version "5.2.2"
     id "systems.manifold.manifold-gradle-plugin" version "0.0.2-alpha"
 }
 
@@ -64,10 +64,10 @@ subprojects {
         annotationProcessor("systems.manifold:manifold-preprocessor:${rootProject.manifold_version}")
 
         minecraft "com.mojang:minecraft:${rootProject.minecraft_version}"
-        // The following line declares the mojmap mappings, you may use other mappings as well
-        mappings loom.officialMojangMappings()
-        // The following line declares the yarn mappings you may select this one as well.
-        // mappings "net.fabricmc:yarn:1.19.4+build.2:v2"
+        mappings loom.layered() {
+            officialMojangMappings()
+            parchment("org.parchmentmc.data:parchment-${rootProject.parchment_version}@zip")
+        }
     }
 }
 
