Support for 1.20.6 and 1.21

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 processResources {
     inputs.property "version", project.version
 
-    filesMatching("META-INF/mods.toml") {
+    filesMatching("META-INF/neoforge.mods.toml") {
         expand "version": project.version,
                 "description": rootProject.mod_description,
                 "compatible_minecraft_versions": rootProject.compatible_forge_versions,
