--- a/settings.gradle
+++ b/settings.gradle
@@ -4,13 +4,14 @@ pluginManagement {
         maven { url "https://maven.architectury.dev/" }
         maven { url "https://maven.minecraftforge.net/" }
         maven { url "https://maven.neoforged.net/releases/" }
+        maven { url "https://maven.parchmentmc.org/" }
         gradlePluginPortal()
     }
 }
 
 // Loads the version.properties
 def loadProperties() {
-    def defaultMcVersion = "1.20.1" // 1.20.1 is our current most stable version so we use that if no version was defined
+    def defaultMcVersion = "1.21" // 1.21 is our current most stable version so we use that if no version was defined
 
     def mcVersion = ""
     def mcVers = fileTree("versionProperties").files.name // Get all the files in "versionProperties"
