--- a/versionProperties/1.21.properties
+++ b/versionProperties/1.21.properties
@@ -2,7 +2,7 @@
 java_version=21
 minecraft_version=1.21
 parchment_version=1.21:2024.06.23
-compatible_minecraft_versions=["1.21.0"]
+compatible_minecraft_versions=["1.21.0","1.21.1","1.21.2","1.21.3","1.21.4"]
 accessWidenerVersion=1_21
 builds_for=fabric,neoforge
 
@@ -20,4 +20,4 @@ neoforge_version=21.0.42-beta
 cloth_config_version=15.0.127
 modmenu_version=11.0.1
 
-mcVer=1.21
+mcVer=1.21.4
