Update gradle build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ bin/
 
 
 run/
-Merged/
-buildAllJars/
 build.properties
+mcver.properties
+*.build.log
+.architectury-transformer/
+buildAllJars/
+Merged/
