--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.6-SNAPSHOT" apply false
+    id "dev.architectury.loom" version "1.13-SNAPSHOT" apply false
     id "io.github.pacifistmc.forgix" version "1.2.9"
     id "org.ajoberstar.grgit" version "5.2.2"
     id "systems.manifold.manifold-gradle-plugin" version "0.0.2-alpha"
@@ -27,7 +27,7 @@ def writeBuildGradlePredefine(List<String> mcVers, int mcIndex) {
     new File(projectDir, "build.properties").text = sb.toString()
 }
 
-def generateForgeVersions(mc_versions) {
+static def generateForgeVersions(mc_versions) {
     def json = new JsonSlurper().parseText(mc_versions) as List<String>
     if (json.size() == 0) {
         throw new Exception("error invalid version list")
@@ -142,6 +142,8 @@ forgix {
             projectName = "neoforge"
             jarLocation = "build/libs/${project.archives_base_name}-neoforge-${rootProject.versionStr}.jar"
         }
+
+    removeDuplicate "com.mrmelon54.ClockHud"
 }
 
 def getVersionMetadata() {
