--- a/versionProperties/1.16.5.properties
+++ b/versionProperties/1.16.5.properties
@@ -4,7 +4,7 @@ minecraft_version=1.16.5
 parchment_version=1.16.5:2022.03.06
 compatible_minecraft_versions=["1.16.4", "1.16.5"]
 accessWidenerVersion=1_16
-builds_for=fabric,forge
+builds_for=fabric
 
 architectury_group=me.shedaniel
 architectury_version=1.32.68
@@ -12,9 +12,6 @@ architectury_version=1.32.68
 # Fabric loader
 fabric_loader_version=0.13.2
 fabric_api_version=0.42.0+1.16
-
-# Forge loader
-forge_version=1.16.5-36.2.41
 
 # Libraries
 cloth_config_version=4.17.101
