--- a/versionProperties/1.17.1.properties
+++ b/versionProperties/1.17.1.properties
@@ -4,7 +4,7 @@ minecraft_version=1.17.1
 parchment_version=1.17.1:2021.12.12
 compatible_minecraft_versions=["1.17", "1.17.1"]
 accessWidenerVersion=1_17_1
-builds_for=fabric,forge
+builds_for=fabric
 
 architectury_group=dev.architectury
 architectury_version=2.10.12
@@ -12,9 +12,6 @@ architectury_version=2.10.12
 # Fabric loader
 fabric_loader_version=0.13.2
 fabric_api_version=0.42.1+1.17
-
-# Forge loader
-forge_version=1.17.1-37.1.1
 
 # Libraries
 cloth_config_version=5.3.63
